Fixed paired unit highlighting on hover, HP bar width, tag sprite alignment

--- a/CSS/basics.css
+++ b/CSS/basics.css
@@ -54,16 +54,24 @@
     text-decoration: line-through;
 }
 
-.bright{
-	filter: brightness(160%);
+.bright{ 
+    -webkit-filter: brightness(170%);
+    filter: brightness(170%); 
+}
+.dim{ 
+    -webkit-filter: brightness(50%);
+    filter: brightness(50%);
 }
 
 .grayscale{
     -webkit-filter: grayscale(95%);
     filter: grayscale(95%);
 }
-
+.dimGrayscale{
+    -webkit-filter: grayscale(70%) brightness(50%);
+    filter: grayscale(70%) brightness(50%);
+}
 .brightGrayscale{
-    -webkit-filter: grayscale(80%) brightness(160%);
-    filter: grayscale(80%) brightness(160%);
+    -webkit-filter: grayscale(70%) brightness(170%);
+    filter: grayscale(70%) brightness(170%);
 }
